Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignTextNumberWrapped.quorum
class main
    action main
        text t = 7.5
    end
end